2015-04-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * update README to latest svn path
        * fix a bug (potential division by 0) in python/prepareHistos.py

2015-03-27 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * update of multiple tutorial macros to not using ATLAS data
        * tagging HistFitter-00-00-46 for tutorial at DESY

2015-03-14 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M       analysis/tutorial/MyShapeFitExample.py
        M       analysis/tutorial/MySimpleChannelConfig.py
        M       scripts/HistFitter.py
        M       src/Utils.cxx
        M       src/Utils.h
        * allow for fixing certain parameters in a fit by using the command line option -C parameter1:value1,parameter2:value2,...
        * various small additions to tutorial examples

2015-03-11 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M       src/ConfigMgr.cxx
        M       analysis/tutorial/MySimpleChannelConfig.py
        M       docs/tutorial_upperlimits.txt
        * completed upper limit tutorial
        * tagging HistFitter-00-00-45

2015-03-06 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        A       scripts/HypoTest.py
        M       src/ConfigMgr.cxx
        M       src/ConfigMgr.h
        * added dynamic rescan for upper limit calculation

2015-02-18 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M       python/configManager.py
        M       src/ConfigMgr.cxx
        M       src/ConfigMgr.h
	* allow the user to specify the scan ranges for the second scan in -l - addition sugested by Daniela Boerner

2015-01-21 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * multiple smaller modifications for the tutorial, mostly commenting any usage of the ATLAS plotting style, but also adding the file MyUpperLimitAnalysis_SS.py back
        * updating setup_afs.sh to Root 5.34.23
        * tagging HistFitter-00-00-44
